add new links to therapies and enable gitignore

--- a/app/views/therapies/show.html.haml
+++ b/app/views/therapies/show.html.haml
@@ -1,3 +1,5 @@
 = image_tag(@therapy.image_url, width: 500)
 %p= @therapy.name
 %p= @therapy.description
+
+= link_to 'See More Therapies', therapies_path
